# exampleProject

models/: yolox.param
testCase/: CMakeLists.txt  main.cpp  utils.h
yolox/: CMakeLists.txt
yolox/include/: detect.h
yolox/src/: detect.cpp  utils.h  yolox.cpp  yolox.h
